Update 2. Add Two Numbers.md

--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -14,6 +14,8 @@ Something stops me awhile is the last part when check the condition whether curr
 after the last node. The process will cause problem because '''None does not have .next''' Tried to make it simple but it seems like the first time hitting
 None is a tricky point to handle. 
 
+Acutally first idea in mind was using recursion, base case with .next = None and using l1.next as input every time. For the sake of completion, did not dive 
+too deep into it. 
 
 Runtime: 93 ms
 
