--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -7,7 +7,7 @@ One key point is that the question actually wants you to return the first node i
 So I created a dummy node and set a pointer cur to track every node down. Using while loop and boolean condition to make sure that
 as long as one of them is not the last node, the work continues. 
 
-Set a flag '''plus''' to make sure add 1 to cur_value when flag is on (plus=1). **Make sure to check the flag after while loop. Because if the flag is on, we need
+Set a flag ```plus``` to make sure add 1 to cur_value when flag is on (plus=1). **Make sure to check the flag after while loop. Because if the flag is on, we need
 to create a new node with value 1 and append it.**
 
 Something stops me awhile is the last part when check the condition whether current node is None. If leave it as '''l1 = l1.next''' If it turns None
