--- a/152. Maximum Product Subarray.md
+++ b/152. Maximum Product Subarray.md
@@ -1,27 +1,27 @@
 [152. Maximum Product Subarray](https://leetcode.com/problems/maximum-product-subarray/description/)
 ## 2023/07/21
 Haven't updated for a while. Completely forgot this repo :(
-Back with a dp problem, thought it would be similar to [53. Maximum Subarray](53. Maximum Subarray.md)
+Back with a dp problem, thought it would be similar to [53. Maximum Subarray](https://github.com/HangLiu01/LeetcodeTrip/blob/main/53.%20Maximum%20Subarray.md), however it needs to consider more cases like when there are two negatives in the list.
 
-Start witht the first one here. Used brute force to solve. 
+After multiple tries, the logic is to keep tracking not only the max sub value but also the min sub value. In such way, we are be able to track the edge case when we have even negatives in our array.
 
-Runtime: 8027 ms
 
-Memory Usage: 14.4 MB
+Runtime: 62 ms
 
-Learnt hashmap on this type of question after looking at the solutions posted by other people.
-
+Memory Usage: 13.83 MB
 ```
 class Solution(object):
-    def twoSum(self, nums, target):
+    def maxProduct(self, nums):
         """
         :type nums: List[int]
-        :type target: int
-        :rtype: List[int]
+        :rtype: int
         """
-        for i in range(len(nums)):
-            for t in range(i+1, len(nums)):
-                if nums[i]+nums[t] == target:
-                    return [i, t]
-        
+        result = max_val = min_val = nums[0]
+        for i in range(1,len(nums)):
+            n = nums[i]
+            temp = max(n, n*max_val, n*min_val)
+            min_val = min(n, n*max_val, n*min_val)
+            max_val = temp
+            result = max(result, max_val)
+        return result
 ```
