Update 70. Climbing Stairs.md

--- a/70. Climbing Stairs.md
+++ b/70. Climbing Stairs.md
@@ -1,6 +1,6 @@
 [70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/description/)
 ## 2023/07/26
-It took me awhile to think about the question. I think I still need more practice on dp problem. I used recursion for my first try but it failed due to time exceed. Therefore, I created a dictionary to store existed numbers instead of having them running to the base case for every number.
+It took me awhile to think about the question. I think I still need more practice on dp problem. I used recursion for my first try but it failed due to time exceed. Therefore, I created a dictionary to store existed numbers instead of having them running to the base case for every number. Though I did not use a dp to solve the problem. I just called it dp cuz i dont know what to name.
 
 Runtime: 11 ms
 
